Fixed background color occasionally not showing up above footer on wide displays.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body, html {
+  background-color: #85e7ff;
+}
+
 .App {
   text-align: center;
   background-color: #85e7ff;
@@ -22,7 +26,8 @@
 
 canvas {
   width: 100% !important;
-  height: auto !important;
+  height: 50% !important;
+  max-height: 50%;
 }
 
 .footer {
